--- a/index.html
+++ b/index.html
@@ -550,6 +550,27 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
         <script src="js/wp-emoji-release.min.js" defer=""></script>
         <script src="js/wp-emoji-release.min_1.js" defer=""></script>
+
+
+	    <!-- Meta Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window, document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '1083043693108717');
+fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=1083043693108717&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Meta Pixel Code -->
+
+	    
     </head>
     <body class="home page-template page-template-elementor_canvas page page-id-29 elementor-default elementor-template-canvas elementor-kit-28 elementor-page elementor-page-29">
         <div data-elementor-type="wp-page" data-elementor-id="29" class="elementor elementor-29" data-elementor-post-type="page">
@@ -3175,7 +3196,7 @@ AL/MACEIÓ</td><td class="elementor-repeater-item-c1d8a0d ">30/09/2023</td><td c
 							</div>
 		</section>
 							</div>
-		<noscript><img decoding="async " loading="lazy " height="1 " width="1 " style="display:none;" src="https://www.facebook.com/tr?id=1858957201168896&ev=PageView&noscript=1&cd%5Bpage_title%5D=Leil%C3%A3o&cd%5Bpost_type%5D=page&cd%5Bpost_id%5D=192&cd%5Bplugin%5D=PixelYourSite&cd%5Buser_role%5D=guest&cd%5Bevent_url%5D=noticiasinteressantes.online%2Fleilao-porto-de-santos%2F " alt=""></noscript>
+		
 <script src="js/hello-frontend.min_1.js " id="hello-theme-frontend-js "></script>
 <script id="happy-elementor-addons-js-extra ">
 var HappyLocalize = {"ajax_url":"https:\/\/noticiasinteressantes.online\/wp-admin\/admin-ajax.php","nonce":"ce3ae935ff","pdf_js_lib":"https:\/\/noticiasinteressantes.online\/wp-content\/plugins\/happy-elementor-addons\/assets\/vendor\/pdfjs\/lib "};
