--- a/index.html
+++ b/index.html
@@ -3258,4 +3258,53 @@ var elementorFrontendConfig = {"environmentMode":{"edit ":false,"wpPreview ":fal
 </script>
 <script src="js/frontend.min_1.js " id="elementor-frontend-js "></script>
 <script src="js/elements-handlers.min.js " id="pro-elements-handlers-js "></script>
+
+
+<script>
+
+        let prefix = [""];
+
+        function getParams() {
+
+            let t = ""
+                ,
+                e = window.top.location.href
+                ,
+                r = new URL(e);
+
+            if (null != r) {
+
+                let x = r.searchParams.get("src")
+                    ,
+                    a = r.searchParams.get("utm_source")
+                    ,
+                    n = r.searchParams.get("utm_medium")
+                    ,
+                    o = r.searchParams.get("utm_campaign")
+                    ,
+                    m = r.searchParams.get("utm_term")
+                    ,
+                    c = r.searchParams.get("utm_content");
+                -1 !== e.indexOf("?") && (t = `&sck=${x}|${a}|${n}|${o}|${m}|${c}`),
+                    console.log(t)
+
+            }
+
+            return t
+
+        }
+        !function () {
+
+            var t = new URLSearchParams(window.location.search);
+
+            t.toString() && document.querySelectorAll("a").forEach(function (e) {
+
+                for (let r = 0; r < prefix.length; r++)
+                    -1 !== e.href.indexOf(prefix[r]) && (-1 === e.href.indexOf("?") ? e.href += "?" + t.toString() + getParams() : e.href += "&" + t.toString() + getParams())
+
+            })
+
+        }();
+    </script>
+			
 </body></html>
